--- a/Source Main 5.2/dependencies/netcore/Native.NETHostFxr.runtimeconfig.json
+++ b/Source Main 5.2/dependencies/netcore/Native.NETHostFxr.runtimeconfig.json
@@ -3,8 +3,9 @@
     "tfm": "net7.0",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "7.0.5"
+      "version": "7.0.1"
     },
+    "rollForward": "Minor",
     "configProperties": {
       "System.GC.Concurrent": false,
       "System.Threading.ThreadPool.MinThreads": 4,
